[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/fresas_main/fresa_mala.2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/fresa_mala_ori.gd" type="Script" id=2]


[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 20.1516

[sub_resource type="Animation" id=3]
resource_name = "power"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.4, 0.4 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[node name="fresa_mala" type="RigidBody2D" groups=[
"mala",
"slow",
]]
position = Vector2( 1.824, -8.41846 )
collision_mask = 0
physics_material_override = SubResource( 1 )
gravity_scale = 2.3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.50169, 0 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/power = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="quitfresa" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_fresa_mala_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="quitfresa" to="." method="_on_quitfresa_timeout"]
